<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CFD8DC"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/published_date_title"
            android:text="@string/date" />

        <TextView
            android:id="@+id/article_date1"
            style="@style/published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_date1" />

        <TextView
            android:id="@+id/article_date2"
            style="@style/published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_date2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ECEFF1"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">

        <TextView
            style="@style/item_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/article_title"
            style="@style/item_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_headline" />
    </LinearLayout>


</LinearLayout>